Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.1
-
None
Description
QUERY:
USE functional; SELECT COALESCE(t1.smallint_col, t1.year, t1.tinyint_col) AS int_col, t2.year, GREATEST(COALESCE(t1.year, -329), COALESCE(t2.int_col, -960)) AS int_col_2 FROM alltypestiny t1 LEFT JOIN ( SELECT t1.year, COALESCE(-914, LAST_VALUE(-660) OVER (ORDER BY t1.year ASC, CAST(SUM(t1.year) AS STRING) DESC), -694) AS int_col, CAST(SUM(t1.year) AS STRING) AS char_col FROM alltypes t1 INNER JOIN alltypesagg t2 ON (t2.string_col) = (t1.date_string_col) GROUP BY t1.year ) t2 ON (((t2.int_col) = (t1.tinyint_col)) AND ((t2.char_col) = (t1.date_string_col))) AND ((t2.char_col) = (t1.date_string_col))
STACK:
#0 0x0000003a0ca32635 in raise () from /lib64/libc.so.6 #0 0x0000003a0ca32635 in raise () from /lib64/libc.so.6 #1 0x0000003a0ca33e15 in abort () from /lib64/libc.so.6 #2 0x0000000001e60cf9 in google::DumpStackTraceAndExit () at src/utilities.cc:147 #3 0x0000000001e583fd in google::LogMessage::Fail () at src/logging.cc:1296 #4 0x0000000001e5be87 in google::LogMessage::SendToLog (this=0x7f3a11920020) at src/logging.cc:1250 #5 0x0000000001e5b3e6 in google::LogMessage::Flush (this=0x7f3a11920020) at src/logging.cc:1119 #6 0x0000000001e5c31d in google::LogMessageFatal::~LogMessageFatal (this=0x7f3a11920020, __in_chrg=<value optimized out>) at src/logging.cc:1817 #7 0x0000000001394419 in impala::RowDescriptor::TupleIsNullable (this=0x5475948, tuple_idx=-1) at /data/9/query-gen/Impala/be/src/runtime/descriptors.cc:318 #8 0x00000000011bd0cb in impala::TupleIsNullPredicate::Prepare (this=0x548aa80, state=0xc576000, row_desc=..., ctx=0x9b0cb00) at /data/9/query-gen/Impala/be/src/exprs/tuple-is-null-predicate.cc:49 #9 0x0000000001175c4b in impala::Expr::Prepare (this=0x5cea820, state=0xc576000, row_desc=..., context=0x9b0cb00) at /data/9/query-gen/Impala/be/src/exprs/expr.cc:353 #10 0x0000000001175c4b in impala::Expr::Prepare (this=0x99b6680, state=0xc576000, row_desc=..., context=0x9b0cb00) at /data/9/query-gen/Impala/be/src/exprs/expr.cc:353 #11 0x0000000001175c4b in impala::Expr::Prepare (this=0x548b880, state=0xc576000, row_desc=..., context=0x9b0cb00) at /data/9/query-gen/Impala/be/src/exprs/expr.cc:353 #12 0x00000000011bd88b in impala::ScalarFnCall::Prepare (this=0x548b880, state=0xc576000, desc=..., context=0x9b0cb00) at /data/9/query-gen/Impala/be/src/exprs/scalar-fn-call.cc:50 #13 0x0000000001175c4b in impala::Expr::Prepare (this=0x5248540, state=0xc576000, row_desc=..., context=0x9b0cb00) at /data/9/query-gen/Impala/be/src/exprs/expr.cc:353 #14 0x00000000011bd88b in impala::ScalarFnCall::Prepare (this=0x5248540, state=0xc576000, desc=..., context=0x9b0cb00) at /data/9/query-gen/Impala/be/src/exprs/scalar-fn-call.cc:50 #15 0x0000000000e74f4b in impala::ExprContext::Prepare (this=0x9b0cb00, state=0xc576000, row_desc=..., tracker=0xb21a160) at /data/9/query-gen/Impala/be/src/exprs/expr-context.cc:52 #16 0x0000000001175a81 in impala::Expr::Prepare (ctxs=std::vector of length 3, capacity 4 = {...}, state=0xc576000, row_desc=..., tracker=0xb21a160) at /data/9/query-gen/Impala/be/src/exprs/expr.cc:344 #17 0x0000000001361af7 in impala::Coordinator::Exec (this=0x5359e00, schedule=..., output_expr_ctxs=0x1029ab50) at /data/9/query-gen/Impala/be/src/runtime/coordinator.cc:352 #18 0x000000000101c455 in impala::ImpalaServer::QueryExecState::ExecQueryOrDmlRequest (this=0x1029a000, query_exec_request=...) at /data/9/query-gen/Impala/be/src/service/query-exec-state.cc:401 #19 0x00000000010195f8 in impala::ImpalaServer::QueryExecState::Exec (this=0x1029a000, exec_request=0x7f3a11922980) at /data/9/query-gen/Impala/be/src/service/query-exec-state.cc:138 #20 0x0000000000f6eca2 in impala::ImpalaServer::ExecuteInternal (this=0x43a6b00, query_ctx=..., session_state=..., registered_exec_state=0x7f3a11923b77, exec_state=0x7f3a11923df0) at /data/9/query-gen/Impala/be/src/service/impala-server.cc:607 #21 0x0000000000f6e308 in impala::ImpalaServer::Execute (this=0x43a6b00, query_ctx=0x7f3a11923c30, session_state=..., exec_state=0x7f3a11923df0) at /data/9/query-gen/Impala/be/src/service/impala-server.cc:550 #22 0x0000000000fe7b3b in impala::ImpalaServer::ExecuteStatement (this=0x43a6b00, return_val=..., request=...) at /data/9/query-gen/Impala/be/src/service/impala-hs2-server.cc:709 #23 0x00000000012940b7 in apache::hive::service::cli::thrift::TCLIServiceProcessor::process_ExecuteStatement (this=0x2979360, seqid=0, iprot=0x599e080, oprot=0x599e040, callContext=0x56af3c0) at /data/9/query-gen/Impala/be/generated-sources/gen-cpp/TCLIService.cpp:4695 #24 0x00000000012925d8 in apache::hive::service::cli::thrift::TCLIServiceProcessor::dispatchCall (this=0x2979360, iprot=0x599e080, oprot=0x599e040, fname="ExecuteStatement", seqid=0, callContext=0x56af3c0) at /data/9/query-gen/Impala/be/generated-sources/gen-cpp/TCLIService.cpp:4506 #25 0x000000000125c37b in impala::ImpalaHiveServer2ServiceProcessor::dispatchCall (this=0x2979360, iprot=0x599e080, oprot=0x599e040, fname="ExecuteStatement", seqid=0, callContext=0x56af3c0) at /data/9/query-gen/Impala/be/generated-sources/gen-cpp/ImpalaHiveServer2Service.cpp:463 #26 0x0000000000f7ee4e in apache::thrift::TDispatchProcessor::process (this=0x2979360, in=..., out=..., connectionContext=0x56af3c0) at /data/9/query-gen/Impala/thirdparty/thrift-0.9.0/build/include/thrift/TDispatchProcessor.h:121 #27 0x0000000001e141f9 in apache::thrift::server::TThreadPoolServer::Task::run (this=0x60568a0) at src/thrift/server/TThreadPoolServer.cpp:70 #28 0x0000000001e0075f in apache::thrift::concurrency::ThreadManager::Task::run (this=0x56af440) at src/thrift/concurrency/ThreadManager.cpp:187 #29 0x0000000001e026a4 in apache::thrift::concurrency::ThreadManager::Worker::run (this=0x2fe6900) at src/thrift/concurrency/ThreadManager.cpp:316 #30 0x0000000000ec1ecb in impala::ThriftThread::RunRunnable (this=0x40b6840, runnable=..., promise=0x7fffd6783640) at /data/9/query-gen/Impala/be/src/rpc/thrift-thread.cc:61 #31 0x0000000000ec367b in boost::_mfi::mf2<void, impala::ThriftThread, boost::shared_ptr<apache::thrift::concurrency::Runnable>, impala::Promise<unsigned long>*>::operator() (this=0x5d8cc00, p=0x40b6840, a1=..., a2=0x7fffd6783640) at /usr/include/boost/bind/mem_fn_template.hpp:280 #32 0x0000000000ec34d4 in boost::_bi::list3<boost::_bi::value<impala::ThriftThread*>, boost::_bi::value<boost::shared_ptr<apache::thrift::concurrency::Runnable> >, boost::_bi::value<impala::Promise<unsigned long>*> >::operator()<boost::_mfi::mf2<void, impala::ThriftThread, boost::shared_ptr<apache::thrift::concurrency::Runnable>, impala::Promise<unsigned long>*>, boost::_bi::list0> (this=0x5d8cc10, f=..., a=...) at /usr/include/boost/bind/bind.hpp:392 #33 0x0000000000ec3251 in boost::_bi::bind_t<void, boost::_mfi::mf2<void, impala::ThriftThread, boost::shared_ptr<apache::thrift::concurrency::Runnable>, impala::Promise<unsigned long>*>, boost::_bi::list3<boost::_bi::value<impala::ThriftThread*>, boost::_bi::value<boost::shared_ptr<apache::thrift::concurrency::Runnable> >, boost::_bi::value<impala::Promise<unsigned long>*> > >::operator() (this=0x5d8cc00) at /usr/include/boost/bind/bind_template.hpp:20 #34 0x0000000000ec315f in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf2<void, impala::ThriftThread, boost::shared_ptr<apache::thrift::concurrency::Runnable>, impala::Promise<unsigned long>*>, boost::_bi::list3<boost::_bi::value<impala::ThriftThread*>, boost::_bi::value<boost::shared_ptr<apache::thrift::concurrency::Runnable> >, boost::_bi::value<impala::Promise<unsigned long>*> > >, void>::invoke (function_obj_ptr=...) at /usr/include/boost/function/function_template.hpp:153 #35 0x0000000000ee75db in boost::function0<void>::operator() (this=0x7f3a11924cd0) at /usr/include/boost/function/function_template.hpp:1013 #36 0x0000000001123020 in impala::Thread::SuperviseThread (name="hiveserver2-frontend-8", category="thrift-server", functor=..., thread_started=0x7fffd6783440) at /data/9/query-gen/Impala/be/src/util/thread.cc:311 #37 0x000000000112b3b8 in boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> >::operator()<void (*)(const std::string&, const std::string&, impala::Thread::ThreadFunctor, impala::Promise<long int>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(const std::string &, const std::string &, impala::Thread::ThreadFunctor, impala::Promise<long> *), boost::_bi::list0 &, int) (this=0x4401090, f=@0x4401088, a=...) at /usr/include/boost/bind/bind.hpp:457 #38 0x000000000112b2ff in boost::_bi::bind_t<void, void (*)(const std::string&, const std::string&, impala::Thread::ThreadFunctor, impala::Promise<long int>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> > >::operator()(void) (this=0x4401088) at /usr/include/boost/bind/bind_template.hpp:20 #39 0x000000000112b28c in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(const std::string&, const std::string&, impala::Thread::ThreadFunctor, impala::Promise<long int>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> > > >::run(void) (this=0x4400f00) at /usr/include/boost/thread/detail/thread.hpp:61 #40 0x0000000001545574 in thread_proxy () #41 0x0000003a0ce079d1 in start_thread () from /lib64/libpthread.so.0 #42 0x0000003a0cae886d in clone () from /lib64/libc.so.6