fe/src/main/java/com/cloudera/impala/planner/AnalyticPlanner.java
@@ -39,6 +39,7 @@ import com.cloudera.impala.analysis.SlotRef;
 import com.cloudera.impala.analysis.SortInfo;
 import com.cloudera.impala.analysis.TupleDescriptor;
 import com.cloudera.impala.analysis.TupleId;
+import com.cloudera.impala.analysis.TupleIsNullPredicate;
 import com.cloudera.impala.common.IdGenerator;
 import com.cloudera.impala.common.ImpalaException;
 import com.cloudera.impala.thrift.TPartitionType;
@@ -126,6 +127,7 @@ public class AnalyticPlanner {
           partitionGroups, groupingExprs, root.getNumNodes(), inputPartitionExprs);
     }
 
+    PlanNode analyticInputNode = root;
     for (PartitionGroup partitionGroup: partitionGroups) {
       for (int i = 0; i < partitionGroup.sortGroups.size(); ++i) {
         root = createSortGroupPlan(root, partitionGroup.sortGroups.get(i),
@@ -136,6 +138,16 @@ public class AnalyticPlanner {
     // create equiv classes for newly added slots
     analyzer_.createIdentityEquivClasses();
 
+    // Add expr mapping to substitute TupleIsNullPredicates referring to the logical
+    // analytic output with TupleIsNullPredicates referring to the physical output.
+    List<TupleId> oldTupleIds = Lists.newArrayList(analyticInputNode.getTupleIds());
+    oldTupleIds.add(analyticInfo_.getOutputTupleId());
+    TupleIsNullPredicate lhs = new TupleIsNullPredicate(oldTupleIds);
+    lhs.analyze(analyzer_);
+    TupleIsNullPredicate rhs = new TupleIsNullPredicate(root.tupleIds_);
+    rhs.analyze(analyzer_);
+    if (root.outputSmap_ == null) root.outputSmap_ = new ExprSubstitutionMap();
+    root.outputSmap_.put(lhs, rhs);
     return root;
   }
 
